--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -9,19 +9,30 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./login.css">
+	<link rel="stylesheet" href="css/login.css">
+  <script src="js/login.js"></script>
 </head>
 
 <body>
 
   <header>
-    <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+    <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul>
-          <li>projets</li>
-          <li>contact</li>
-          <li>login</li>
-          <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+          <li>
+            <a href="#portfolio">projets</a>
+          </li>
+          <li>
+            <a href="#contact">contact</a>
+          </li>
+          <li>
+            <a href="assets/login.html">login</a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="icons/instagram.png" alt="Instagram">
+            </a>
+          </li>
         </ul>
       </nav>
   </header>
