--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -24,8 +24,8 @@
           <li>
             <a href="#contact">contact</a>
           </li>
-          <li>
-            <a href="assets/login.html">login</a>
+          <li id="login">
+            login
           </li>
           <li>
             <a href="#">
