--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -51,6 +51,7 @@
 
     <section id="portfolio">
       <h2>Mes Projets</h2>
+      <ul class="filters"></ul>
       <div class="gallery"></div>
     </section>
 
