--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -51,6 +51,10 @@
 
     <section id="portfolio">
       <h2>Mes Projets</h2>
+      <div class="editBtn">
+        <i class="fa-regular fa-pen-to-square"></i>
+        <p class="modifier">modifier</p>
+      </div>
       <ul class="filters"></ul>
       <div class="gallery"></div>
     </section>
