--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,13 +15,11 @@
 
 <body>
 
-  <header id="admin-screen">
     <p id="edit">
       <i class="fa-regular fa-pen-to-square"></i>
       Mode édition
       <label>Publier les changements</label>
     </p>
-  </header>
 
   <header>
     <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
@@ -49,6 +47,10 @@
     <section id="introduction">
       <figure>
         <img src="./assets/images/sophie-bluel.png" alt="">
+        <p id="edit-picture">
+          <i class="fa-regular fa-pen-to-square"></i>
+          Modifier
+        </p>
       </figure>
       <article>
         <h2>Designer d'espace</h2>
